Admin: fix picotable overflow issue

--- a/shuup/admin/static_src/base/scss/shuup/picotable.scss
+++ b/shuup/admin/static_src/base/scss/shuup/picotable.scss
@@ -1,7 +1,4 @@
 #picotable {
-    .table-view{
-        overflow: scroll;
-    }
     .table {
         margin-top: 1rem;
         background-color: $white;
